--- a/C-GStreamer/Makefile
+++ b/C-GStreamer/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall -g `pkg-config --cflags gstreamer-1.0 gstreamer-app-1.0`
-LDFLAGS = -lpigpio `pkg-config --libs gstreamer-1.0 gstreamer-app-1.0`
+LDFLAGS = -lpigpio -pthread `pkg-config --libs gstreamer-1.0 gstreamer-app-1.0`
 TARGET = capture
 SRC = gStreamFLIR.c
 
